chore: enforce Java 25 — drop Quarkus ASM v21 workarounds + lab lesson docs